logs/output_ferro4.txt
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:53: UserWarning: train_data has been renamed data
  warnings.warn("train_data has been renamed data")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:58: UserWarning: test_data has been renamed data
  warnings.warn("test_data has been renamed data")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:43: UserWarning: train_labels has been renamed targets
  warnings.warn("train_labels has been renamed targets")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:48: UserWarning: test_labels has been renamed targets
  warnings.warn("test_labels has been renamed targets")
init done
{'quantization.global_wb': 4, 'inp_mult': 180, 'nb_hidden': 800, 'nb_steps': 150, 'batch_size': 128, 'quantization.global_lr': 0.0004, 'reg_size': 0.00048219502065459076, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=5.08486
Test accuracy: 0.219
Train accuracy: 0.132
Epoch 2: loss=8.13055
Test accuracy: 0.317
Train accuracy: 0.293
Epoch 3: loss=14.29909
Test accuracy: 0.335
Train accuracy: 0.322
Epoch 4: loss=21.62414
Test accuracy: 0.340
Train accuracy: 0.327
Epoch 5: loss=29.20504
Test accuracy: 0.346
Train accuracy: 0.331
Epoch 6: loss=35.91115
Test accuracy: 0.351
Train accuracy: 0.333
Epoch 7: loss=40.96343
Test accuracy: 0.346
Train accuracy: 0.334
Epoch 8: loss=44.45377
Test accuracy: 0.342
Train accuracy: 0.334
Epoch 9: loss=46.87916
Test accuracy: 0.351
Train accuracy: 0.334
Epoch 10: loss=47.97259
Test accuracy: 0.351
Train accuracy: 0.337
Epoch 11: loss=48.12918
Test accuracy: 0.350
Train accuracy: 0.337
Epoch 12: loss=48.29380
Test accuracy: 0.350
Train accuracy: 0.337
Epoch 13: loss=48.45269
Test accuracy: 0.351
Train accuracy: 0.337
Epoch 14: loss=48.60371
Test accuracy: 0.350
Train accuracy: 0.336
Epoch 15: loss=48.74882
Test accuracy: 0.350
Train accuracy: 0.337
Epoch 16: loss=48.89602
Test accuracy: 0.350
Train accuracy: 0.337
Epoch 17: loss=49.03895
Test accuracy: 0.350
Train accuracy: 0.336
Epoch 18: loss=49.17697
Test accuracy: 0.348
Train accuracy: 0.337
Epoch 19: loss=49.25209
Test accuracy: 0.348
Train accuracy: 0.336
Epoch 20: loss=49.26555
Test accuracy: 0.349
Train accuracy: 0.336
Epoch 21: loss=49.27872
Test accuracy: 0.349
Train accuracy: 0.336
Epoch 22: loss=49.29181
Test accuracy: 0.349
Train accuracy: 0.337
Epoch 23: loss=49.30553
Test accuracy: 0.348
Train accuracy: 0.337
Epoch 24: loss=49.31897
Test accuracy: 0.349
Train accuracy: 0.337
Epoch 25: loss=49.33200
Test accuracy: 0.349
Train accuracy: 0.336
Epoch 26: loss=49.34523
Test accuracy: 0.348
Train accuracy: 0.337
Epoch 27: loss=49.35862
Test accuracy: 0.348
Train accuracy: 0.337
Epoch 28: loss=49.36565
Test accuracy: 0.349
Train accuracy: 0.336
Epoch 29: loss=49.36694
Test accuracy: 0.349
Train accuracy: 0.337
Epoch 30: loss=49.36832
Test accuracy: 0.349
Train accuracy: 0.337
Epoch 31: loss=49.36957
Test accuracy: 0.349
Train accuracy: 0.337
Epoch 32: loss=49.37084
Test accuracy: 0.349
Train accuracy: 0.337
Epoch 33: loss=49.37206
Test accuracy: 0.348
Train accuracy: 0.337
Epoch 34: loss=49.37354
Test accuracy: 0.348
Train accuracy: 0.337
Epoch 35: loss=49.37486
Test accuracy: 0.348
Train accuracy: 0.337
{'quantization.global_wb': 4, 'inp_mult': 180, 'reg_size': 0.00048219502065459076, 'weight_sum': 0.001271231800681126}
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
python: can't open file 'spytorch_dvs2_ferro.py': [Errno 2] No such file or directory
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
  File "spytorch_dvs2_ferrro.py", line 59
    print("hello")print("hello")
                      ^
SyntaxError: invalid syntax
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
init done
{'quantization.global_wb': 4, 'inp_mult': 180, 'nb_hidden': 4000, 'nb_steps': 150, 'batch_size': 64, 'quantization.global_lr': 1.5e-05, 'reg_size': 0.001, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=766.69398
Test accuracy: 0.090
Train accuracy: 0.092
Epoch 2: loss=765.37263
Test accuracy: 0.125
Train accuracy: 0.104
Epoch 3: loss=764.05856
Test accuracy: 0.133
Train accuracy: 0.115
Epoch 4: loss=762.77306
Test accuracy: 0.133
Train accuracy: 0.120
Epoch 5: loss=761.46431
Test accuracy: 0.152
Train accuracy: 0.138
Epoch 6: loss=760.16209
Test accuracy: 0.148
Train accuracy: 0.135
Epoch 7: loss=758.87729
Test accuracy: 0.160
Train accuracy: 0.137
Epoch 8: loss=757.57712
Test accuracy: 0.195
Train accuracy: 0.157
Epoch 9: loss=756.28340
Test accuracy: 0.180
Train accuracy: 0.172
Epoch 10: loss=755.54382
Test accuracy: 0.184
Train accuracy: 0.164
Epoch 11: loss=755.41582
Test accuracy: 0.180
Train accuracy: 0.167
Epoch 12: loss=755.28839
Test accuracy: 0.160
Train accuracy: 0.168
Epoch 13: loss=755.15870
Test accuracy: 0.180
Train accuracy: 0.163
Epoch 14: loss=755.02807
Test accuracy: 0.180
Train accuracy: 0.168
Epoch 15: loss=754.90246
Test accuracy: 0.176
Train accuracy: 0.171
Epoch 16: loss=754.77070
Test accuracy: 0.172
Train accuracy: 0.170
Epoch 17: loss=754.64242
Test accuracy: 0.188
Train accuracy: 0.171
Epoch 18: loss=754.51098
Test accuracy: 0.160
Train accuracy: 0.175
Epoch 19: loss=754.43437
Test accuracy: 0.160
Train accuracy: 0.173
Epoch 20: loss=754.41669
Test accuracy: 0.172
Train accuracy: 0.179
Epoch 21: loss=754.40437
Test accuracy: 0.152
Train accuracy: 0.178
Epoch 22: loss=754.38935
Test accuracy: 0.156
Train accuracy: 0.180
Epoch 23: loss=754.37784
Test accuracy: 0.180
Train accuracy: 0.178
Epoch 24: loss=754.36152
Test accuracy: 0.188
Train accuracy: 0.181
Epoch 25: loss=754.34949
Test accuracy: 0.172
Train accuracy: 0.181
Epoch 26: loss=754.33682
Test accuracy: 0.168
Train accuracy: 0.179
Epoch 27: loss=754.32277
Test accuracy: 0.180
Train accuracy: 0.180
Epoch 28: loss=754.31472
Test accuracy: 0.180
Train accuracy: 0.181
Epoch 29: loss=754.31416
Test accuracy: 0.160
Train accuracy: 0.181
Epoch 30: loss=754.31036
Test accuracy: 0.172
Train accuracy: 0.183
Epoch 31: loss=754.31098
Test accuracy: 0.168
Train accuracy: 0.182
Epoch 32: loss=754.31029
Test accuracy: 0.160
Train accuracy: 0.179
Epoch 33: loss=754.31082
Test accuracy: 0.168
Train accuracy: 0.177
Epoch 34: loss=754.30671
Test accuracy: 0.172
Train accuracy: 0.182
Epoch 35: loss=754.30233
Test accuracy: 0.168
Train accuracy: 0.182
{'quantization.global_wb': 4, 'inp_mult': 180, 'reg_size': 0.001, 'weight_sum': 1.12}
